# QUIC-GStreamer-Integration

./: .gitignore  .gitmodules  LICENSE  install.sh  plan.md  readme.md  timelog.md
data/: readme.md
data/processed_data/Frame_Usefulness_Ratio/QUIC_GOP/: AVG_Frame_Usefulness.csv
data/processed_data/Frame_Usefulness_Ratio/QUIC_SS/: AVG_Frame_Usefulness.csv
data/processed_data/Frame_Usefulness_Ratio/TCP/: AVG_Frame_Usefulness.csv
data/raw_data/mininet_results/QUIC_PPS/Delay_10ms/Loss_0%/Jitter_0ms/Buffer_Delay_42ms/Bandwidth_1000Mbit_per_sec/Cross_Traffic_Disabled/Iteration0/: Frame_latency.csv  Frame_stats.csv  Nal_latency.csv  SSL.keys  Sending_Delay.csv  Stack_Latency.csv
data/scripts/: analyser.py  gstreamer_log_analysis.py  plot_graphs.py  stack_latency_analysis.py
dissertation/: .gitignore  Dissertation.aux  Dissertation.bbl  Dissertation.blg  Dissertation.fdb_latexmk  Dissertation.fls  Dissertation.out  Dissertation.tex  README.md  bibfile.bib  l4proj.bib  l4proj.cls  l4proj.tex  mpaper.cls  reference_papers
dissertation/processed_data/Frame_Usefulness_Ratio/QUIC_FPS/: AVG_Frame_Usefulness.csv
dissertation/processed_data/Frame_Usefulness_Ratio/QUIC_PPS/: AVG_Frame_Usefulness.csv
dissertation/processed_data/Frame_Usefulness_Ratio/UDP/: AVG_Frame_Usefulness.csv
meetings/: Question1.md  Questions2.md  Questions3.md  meeting1.md  meeting10.md  meeting11.md  meeting12.md  meeting13.md  meeting14.md  meeting15.md  meeting16.md  meeting17.md  meeting18.md  meeting19.md  meeting2.md  meeting20.md  meeting3.md  meeting4.md  meeting5.md  meeting6.md  meeting7.md  meeting8.md  meeting9.md
presentation/: readme.md
requirements/: QUIC_GStreamer_Plan.tex
src/: manual.md  readme.md
src/gst-quic/: configure.ac  meson.build
src/gst-quic/plugins/: Makefile.am  gstquic.c  gstquicsink.c  gstquicsink.h  gstquicsinkfps.c  gstquicsinkfps.h  gstquicsinkgop.c  gstquicsinkgop.h  gstquicsinkpps.c  gstquicsinkpps.h  gstquicsinkss.c  gstquicsinkss.h  gstquicsrc.c  gstquicsrc.h  gstquicsrcfps.c  gstquicsrcfps.h  gstquicsrcgop.c  gstquicsrcgop.h  gstquicsrcpps.c  gstquicsrcpps.h  gstquicsrcss.c  gstquicsrcss.h  gstquicutils.c  gstquicutils.h  gsttcpsink.c  gsttcpsink.h  gsttcpsrc.c  gsttcpsrc.h  meson.build
src/gst-quic/tools/: Makefile.am  gstquic.c
src/mininet_tests/: Keyframe_notes.md  Log notes.md  Parameter_Notes.md  analyser.py  avoid_deadlock.sh  generate_cert.sh  gstreamer_log_analysis.py  implementations.json  initial_experiment.py  keep_test_running.sh  network.py  parameters.json  simpleperf.py  stack_latency_analysis.py  test_loop.py  test_runner.py
status_report/: 2310528w_QUIC_Gstreamer_Status_Report.tex  status_report_template.tex
status_report/exemplar/: status_report_exemplar.tex
submodules/: readme.md
summer/: readme.md
